# Server

./: CMakeLists.txt  README.md
client_files/: CMakeLists.txt
client_files/export/: CMakeLists.txt
client_files/import/: CMakeLists.txt
common/: CMakeLists.txt  database.cpp  database.h  database_instances.cpp  emu_oplist.h  emu_versions.cpp  emu_versions.h  eq_constants.h  eq_limits.cpp  eq_limits.h  eq_packet_structs.h  eq_stream_intf.h  rulesys.cpp  ruletypes.h  servertalk.h
common/patches/: patches.cpp  rof2.cpp  tds.cpp  tds.h  tds_constants.h  tds_limits.cpp  tds_limits.h  tds_ops.h  tds_structs.h
eqlaunch/: CMakeLists.txt
hc/: CMakeLists.txt
libs/luabind/: CMakeLists.txt
loginserver/: CMakeLists.txt
queryserv/: CMakeLists.txt
shared_memory/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cppunit/: CMakeLists.txt
ucs/: CMakeLists.txt
utils/patches/: patch_RoF.conf  patch_RoF2.conf  patch_SoD.conf  patch_SoF.conf  patch_TDS.conf  patch_Titanium.conf  patch_UF.conf
utils/scripts/: eqemu_server.pl
utils/scripts/generators/: repository-generator.pl
utils/sql/: db_update_manifest.txt
world/: CMakeLists.txt  client.cpp  cliententry.h  clientlist.cpp  main.cpp  shared_tasks.cpp  zoneserver.cpp
zone/: CMakeLists.txt  attack.cpp  bot.cpp  bot_command.cpp  bot_database.cpp  bot_database.h  client.cpp  client.h  client_mods.cpp  client_packet.cpp  client_packet.h  client_process.cpp  command.cpp  doors.cpp  embparser.h  embparser_api.cpp  entity.cpp  exp.cpp  inventory.cpp  lua_client.cpp  lua_client.h  lua_general.cpp  mob_movement_manager.cpp  perl_client.cpp  perl_mob.cpp  pets.cpp  questmgr.cpp  questmgr.h  string_ids.h  tasks.cpp  tasks.h  worldserver.cpp  zone.cpp  zonedb.cpp  zonedb.h  zonedump.h
