CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(import_sources
	main.cpp
)

SET(import_headers
)

ADD_EXECUTABLE(import_client_files ${import_sources} ${import_headers})

IF(EQEMU_ENABLE_LTO AND LTO_SUPPORTED)
	SET_PROPERTY(TARGET import_client_files PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
ENDIF()

INSTALL(TARGETS import_client_files RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

TARGET_LINK_LIBRARIES(import_client_files ${SERVER_LIBS})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
